[package]
name = "quickprice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blocking = "1.3.1"
chrono = "0.4.24"
clap = { version = "4.2.1", features = ["derive"] }
log = "0.4.17"
reqwest = { version = "0.11.16", features = ["json", "blocking"] }
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
simple_logger = "4.1.0"
